remove modal's styles into a separate file, fix the horizontal scroll due to modal__backdrop oversize

--- a/src/components/modals/SubjectDetails.scss
+++ b/src/components/modals/SubjectDetails.scss
@@ -1,66 +1,23 @@
 @import "../../utils/mixins";
-@import "../../utils/color";
 
-.modal  {
-    position: absolute;
-    // background-color: rgba($black-primary, .5);
-    width: 100%;
-    height: 100%;
+.row__checkbox {
+    border: 1px solid rgba(#0000, .5);
+    background-color: white;
+    padding: .4rem .4rem;
+    border-radius: 4px;
     
-    .modal__content {
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        z-index: 10;
-        transform: translate(-40%, -20%);
-        background-color: rgba($white-primary, 1);
-
-        height: 30vh;
-        width: 60vh;
-        
-        box-shadow: 0px 0px 8px 0px black;
-        border-radius: 6px;
-    }
-
-    .modal__backdrop {
-        position: absolute;
-        width: 110%;
-        height: 100%;
-
-        background-color: rgba($black-primary, .8);
-    }
-    
-}
-
-.modal__content form {
-    padding: 2rem 1.6rem;
-
-    .warning {
-        color: $accent_2;
-    }
-
-    .row {
+    div {
         width: 100%;
-        @include d-flex(row, center, center);
-        margin-top: .8rem;
+        text-align: center;
     }
-
-    .row--col {
-        width: 100%;
-        @include d-flex(column, center, flex-start);
-        margin-top: .8rem;
+    div:first-child {
+        text-align: left;
     }
-
-    .row__checkbox {
-        border: 1px solid rgba(#0000, .5);
-        background-color: white;
-        padding: .4rem .4rem;
-        border-radius: 4px;
-        @include d-flex(row, space-evenly, center);
-        
-        div:hover {
-            transform: scale(1.1);
-        }
+    div:last-child {
+        text-align: right;
+    }
+    div:hover {
+        transform: scale(1.1);
     }
 }
 
@@ -87,15 +44,5 @@
         background-color: white;
         border-left: none;
         border-radius: 0 4px  4px 0;
-    }
-}
-
-div.content__footer.row {
-    gap: .8rem;
-    justify-content: flex-end;
-    margin-bottom: 1rem;
-
-    button {
-        font-size: .8rem;
     }
 }
